# pyps-algorithms

./: .coverage  .gitignore  EXCEL_BOOLEAN_CONVERSION_COMPLETE.md  README.md  comprehensive_code_cleanup_analysis.py  config.yaml  debug_test.py  debug_working_calendar.py  debug_xlwings_function.py  main.py  pyproject.toml  refactor_baseline.json  test_comparison.py  test_excel_boolean_conversion.py  test_excel_conversion_debug.py  test_excel_date_conversion.py  test_excel_datetime_formats.py  test_excel_serial_fix.py  test_excel_time_conversion.py  test_progress_comparison.py  test_refactor_progress.py  test_string_datetime.py  test_working_calendar.py  test_xlwings_comprehensive.py  test_xlwings_core.py  test_xlwings_function_direct.py  test_xlwings_lite_final.py  test_xlwings_lite_fix.py
data/12PYR/: bom.csv
data/L09-xxx/: calendar_exceptions.csv  calendar_rules.csv  demand_history.csv  demand_history_test.csv  demand_history_train.csv  items.csv  rolling_forecast.csv
data/current/: demand_history.csv  forecast.csv  independent_demand.csv  items.csv  rolling_forecast.csv  total_demand.csv
data/lakana/: bom.csv  independent_demand.csv  items.csv  total_demand.csv
data/simple/: bomx.csv  demand_history.csv  independent_demand.csv  items.csv  total_demand.csv
data/test/: bom.csv  demand_history.csv  demand_history_test.csv  demand_history_train.csv  independent_demand.csv  items.csv  total_demand.csv
data/xpreso/: bom.csv  independent_demand.csv  total_demand.csv
docs/: EXCEL_TIME_CONVERSION_COMPLETE.md  FINAL_XLWINGS_LITE_SOLUTION.md  rolling_forecast_reference.md  xlwings_lite_AI_CODER_INSTRUCTIONS.md  xlwings_lite_fix_summary.md  xlwings_lite_module_sync_proposal.md
excel/: BOM_Explosion_v01.03.xlsm  Forecast_ETS_v01.01.xlsm  Forecast_ETS_v01.02.xlsm  Working_Calendar_v01.03.xlsm
excel/Archive/: BOM_Explosion_v01.01.xlsm  BOM_Explosion_v01.02.xlsm  PyPS_Working_Calendar_v01.01.xlsm  PyPS_Working_Calendar_v01.02.xlsm
scripts/: check_forecast_results.py  compare_rolling_vs_nonrolling.py  performance_comparison_rolling_forecast.py  prepare_forecast_data.py
src/: config.py  explode_bom.py  forecast_ets.py  working_calendar.py
tests/: test_ast_consistency.py  test_config.py  test_explode_bom.py  test_forecast_ets.py  test_working_calendar.py
tests/data_generators/: generate_ets_test_data.py  generate_forecast_results.py  (+1 more)
xlwings_lite/: explode_bom_lite.py  working_calendar_lite.py
(+17 files in other folders)
