[project]
name = "pyps-scheduling-algorithms"
version = "0.1.0"
description = "Simplified, portable repository containing two core scheduling algorithms: BOM Explosion and Working Calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "xlwings>=0.33.15",
    "pyyaml>=6.0",
]

[project.scripts]
pyps = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json"]
