[project]
name = "pyps-scheduling-algorithms"
version = "0.1.0"
description = "Simplified, portable repository containing two core scheduling algorithms: BOM Explosion and Working Calendar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "pytest>=8.4.1",
    "xlwings>=0.33.15",
    "pyyaml>=6.0",
    "pytest-cov>=6.2.1",
    "statsmodels>=0.14.5",
    "statsforecast>=2.0.2",
    "polars>=1.31.0",
]

[project.scripts]
pyps = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
filterwarnings = [
    # Ignore pkg_resources deprecation warning from third-party packages (comprehensive)
    "ignore:pkg_resources is deprecated.*:UserWarning",
    "ignore:.*pkg_resources.*:UserWarning",
    # Ignore statsmodels convergence warnings during testing
    "ignore:Optimization failed to converge.*",
    # Ignore all warnings from third-party dependencies during testing
    "ignore::UserWarning:fs.*",
    "ignore::UserWarning:triad.*",
    "ignore::UserWarning:fugue.*",
    "ignore::UserWarning:statsmodels.*",
    # Ignore future warnings from pandas and other packages
    "ignore::FutureWarning",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.json"]
